<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD100"
    tools:context=".LoginSignup.SignupActivity"


    >

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:clickable="true"
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="192dp"
            android:layout_height="133dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/anton"
            android:text="Create Account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="transition_title_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullnameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/fullname_icon"
                app:startIconTint="@color/black"
                app:errorTextColor="@color/red1"
                app:boxStrokeErrorColor="@color/red1"
                app:errorIconTint="@color/red1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/FullnameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/anton"
                    android:inputType="text"
                    android:textColor="@color/black"
                    />


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_name"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/user_icon"
                app:startIconTint="@color/black"
                app:errorTextColor="@color/red1"
                app:boxStrokeErrorColor="@color/red1"
                app:errorIconTint="@color/red1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/anton"
                    android:inputType="text"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/black"
                app:errorTextColor="@color/red1"
                app:boxStrokeErrorColor="@color/red1"
                app:errorIconTint="@color/red1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/anton"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/black"
                app:errorTextColor="@color/red1"
                app:boxStrokeErrorColor="@color/red1"
                app:errorIconTint="@color/red1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/anton"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    />


            </com.google.android.material.textfield.TextInputLayout>




         </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/next_btn"
    android:backgroundTint="@color/black"
    android:textColor="@color/white"
    android:layout_marginTop="20dp"
    android:elevation="5dp"
    android:transitionName="transition_next_btn" />

    <Button
        android:id="@+id/signup_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_string"
        android:backgroundTint="#00000000"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:transitionName="transition_login_btn"/>


    </LinearLayout>


</ScrollView>